k8s-manifests/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: preview-service
  namespace: ssgtm
spec:
  type: ClusterIP
  selector:
    app: preview
  ports:
  - port: 3000
    targetPort: 8080
