k8s-manifests/service-tagging.yaml
apiVersion: v1
kind: Service
metadata:
  name: tagging-service
  namespace: ssgtm
spec:
  type: ClusterIP
  selector:
    app: tagging
  ports:
  - port: 3002
    targetPort: 8080
