k8s-manifests/regional-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: regional-http
  annotations:
    networking.gke.io/certmap: ssgtm-certificate-map
  namespace: ssgtm
spec:
  gatewayClassName: gke-l7-gxlb
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
  addresses:
  - type: NamedAddress
    value: sgtm-ip
