k8s-manifests/route-preview.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: preview-route
  namespace: ssgtm
spec:
  parentRefs:
  - kind: Gateway
    name: external-http
  hostnames:
  - "ssgtm-preview.mgalite.demo.altostrat.com"
  rules:
  - backendRefs:
    - name: preview-service
      port: 3000
